Fixed name going out of screen

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ svg {
   width: 100%;
   height: 300px;
   margin-top: 7%;
+  margin: 10px;
 }
 
 .text-copy {
